tests/miniJava/neg/003055_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = while new int [ 0 ] ; } }
